2013-11-10 Jussi Ohenoja <juice@swagman.org>
	* Realised that evtap can only handle non-space-broken lines as return strings. Bummer, did a lot of debugging to find out why on earth I cannot use a kernel line containing spaces with automatic selection.
	* Third take on the automatic kernel listing based on a given directory. Could not export temporary values to another function, have to work around that.

2013-11-09 Jussi Ohenoja <juice@swagman.org>
	* Corrected a bug in pack_cpio.sh script: the archive root permssions were wrong.
	* Second take on the automatic kernel listing based on a given directory. Just found out that busybox does not support arrays in shell scripts, so had to code around it.
	* Fixed the log partition mounting logic in init and select_and_boot_os.sh

2013-11-08 Jussi Ohenoja <juice@swagman.org>
	* Corrected a bug in pack_cpio.sh script: the archive was not created with root-owned files, which led to problems when trying to ssh/sftp to the device as unpacking the cpio changed root ownership to 1000:1000 instead of 0:0.
	* Updated config interface version to 4.
	* First take on the automatic kernel listing based on a given directory.

2013-11-07 Jussi Ohenoja <juice@swagman.org>
	* Fixed a small bug in select_os_animated.sh script. The on-the-fly mapfile creation made an extra hook for the non-existing 6th line when there are 5 items in the menu. Props for peterleinchen for spotting this :)

2013-11-06 Jussi Ohenoja <juice@swagman.org>
	* Added configuration key for DSME & BME startup.

2013-10-29 Jussi Ohenoja <juice@swagman.org>
	* New version 0.3.5 released.
	* Corrected typos in the template ubiboot.conf, Thanks go to @eekkelund for spotting the typo.

2013-10-25 Jussi Ohenoja <juice@swagman.org>
	* Changed the rootfs seed build location.
	* Added the kernel patch to repository.

2013-10-24 Jussi Ohenoja <juice@swagman.org>
	* Updated the README document. Considerable rewrite to make it a bit more coherent.